# pybamm-param

./: .coverage  .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  Particle_swarm.ipynb  Particle_swarm_temp.ipynb  README.md  SciPy_fmin.ipynb  SciPy_fmin_single.ipynb  basinhopping.ipynb  codemeta.json  coverage.xml  create model try.ipynb  create_model.py  dependancy_licences.txt  dependancy_licenses.txt  differential_evolution-Copy1.ipynb  differential_evolution.ipynb  differential_evolution_worker.ipynb  differential_evolution_worker_individual.ipynb  dual_annealing.ipynb  fmin_normalized_with_function.ipynb  get_dep_licenses.py  install_nlopt.sh  noxfile.py  optimisation_problem.py  process_experimental_data.py  pyproject.toml  requirements.txt  run-tests.py  scipy_differential_evolution.py  scipy_minimize.py  set_parameters.py  setup.py  test_differential_evolution.py  test_ferran.py  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release_on_main.yml  test_on_push.yml
OCP_balance/: anode_OCP_2.csv  ocp_notebook.ipynb
OCP_balance_example/: OCP_balance.ipynb  ocp_balance.py  ocp_notebook.ipynb
TEC-reduced-model-main/: requirements.txt
TEC-reduced-model-main/notebooks/: plot_experimental_data.ipynb
TEC-reduced-model-main/scripts/: compare_mesh_points.py  time_TSPMe_TDFN.py
data/: anode_OCP_2.csv  anode_OCP_2_lit.csv  cathode_OCP_2.csv  cathode_OCP_2_delit.csv
data/10degC/: Cell783_0p1C_10degC.csv
data/25degC/: Cell787_0p5C_25degC.csv  Cell796_2C_25degC.csv
docs/: conf.py  index.rst  process_experimental_data.rst  requirements.txt  set_parameters.rst  tests.unit.rst  tests.unit.test_optimisation_problems.rst
docs/install/: GNU-linux.rst  install-from-source.rst  windows-wsl.rst  windows.rst
docs/old_files/: modules.rst  pbparam.cost_functions.rst  pbparam.optimisation_problems.rst  pbparam.optimisers.rst  pbparam.rst  run-tests.rst  tests.rst  tests.unit.test_cost_functions.rst  tests.unit.test_optimisers.rst
docs/source/: optimisation_result.rst
examples/notebooks/: GITT_loop.ipynb  SPM_GITT.ipynb  datafit_multivariable.ipynb  datafit_single_variable.ipynb  datafit_singlevariable.ipynb  gitt.ipynb  ocp_balance.ipynb  pymoo.ipynb  test_datafit.ipynb  (+4 more)
old_files/: MSM_main.ipynb  create model try.ipynb  differential_evolution.ipynb  differential_evolution_worker.ipynb  fmin.ipynb  ocp_balance.py  parameter_optimization.ipynb  parameter_optimization_advanced.ipynb  particle_swarm.ipynb
parameter_optimization/: Pyswarms.ipynb
pbparam/: __init__.py  optimisation_problem.py  optimisation_result.py
tests/: __init__.py  objective_functions  objective_functions.py  scratch.ipynb  shared.py
(+163 files in other folders)
