[build-system]
requires = [
    "hatchling>=1.6.0",
]
build-backend = "hatchling.build"

[project]
name = "pbparam"
description = "A package for optimising parameters in PyBaMM. Under development."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Ferran Brosa Planella, Muhammed Sogut, W. Dhammika Widanage", email = "Ferran.Brosa-Planella@warwick.ac.uk" },
]
dependencies = [
    "matplotlib",
    "pybamm",
    "numpy",
    "pandas",
    "scipy",
    "cmake",
    "nlopt",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
dev = [
    "nox",
    "coverage",
    "black",
    "flake8>=3",
    "wheel",
]
docs = [
    "guzzle-sphinx-theme",
    "sphinx>=1.5",
    "sphinx-rtd-theme",
]
deploy = [
    "bump2version"
]

[tool.hatch.version]
path = "pbparam/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pbparam",
]
